# enterprise-rag

./: .gitignore  Docker-compose.yml  README.md  pyproject.toml
app/: chunking.py  embedding.py  llm.py
app/core/: ingest.py  milvus_client.py  retrieve.py
app/parsers/: pdf_parser.py  web_parser.py  word_parser.py
data/raw/: test_web.html  test_word.docx
experiments/: README.md  chunk_topk_eval_template.md  embedding_similarity_sentence_boundary.md  interview_question_bank.md
experiments/questions/: pdf_test_questions.json  pdf_test_questions.md
experiments/results/: multi_format_chunk_size_compare_purpose.md  multi_format_eval_latest.md  multi_format_rows_per_chunk_compare_zhangsan.md  multi_format_topk_compare_zhangsan.md  multi_format_zhangsan_topk5.md  pdf_test_table_chunk100_topk5.md  pdf_test_table_chunk500_topk5.md  pdf_test_table_rows2_topk5.md
experiments/runs/: pdf_test_table_rows2_topk5_run.md
scripts/: ask_pdf.py  ask_rag.py  debug_retrieval.py  import_document.py  import_pdf.py  inspect_collection.py  reset_collection.py  run_multi_format_eval.py  run_pdf_eval.py  test_pipeline.py  verify_embedding.py  verify_llm.py  verify_milvus.py
tests/: test_learning_checks.py  test_web_parser.py
volumes/etcd/member/snap/: db
volumes/milvus/rdb_data/: IDENTITY  LOG
volumes/milvus/rdb_data_meta_kv/: IDENTITY  LOG
volumes/minio/.minio.sys/: format.json
