[project]
name = "enterprise-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.6",
    "openai>=2.43.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.10",
    "pillow>=12.2.0",
    "pymilvus==2.5.18",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
]
